añadida pista de audio y cambios puntuales

--- a/Proyecto.html
+++ b/Proyecto.html
@@ -87,6 +87,9 @@
 
 
         <div class="divGrande">
+            <div class="audio">
+                <audio src="audio/audiosCombinados.mp3" controls="controls"></audio>
+            </div>
             <div class="card-body">
                 <h5 class="card-title">Información Empresa:</h5>
                 <p class="card-text">WebCura, una empresa de <b>salud en línea</b> con base en <b>Cádiz</b>, está
