--- a/Proyecto.html
+++ b/Proyecto.html
@@ -88,7 +88,17 @@
 
         <div class="divGrande">
             <div class="audio">
-                <audio src="audio/audiosCombinados.mp3" controls="controls"></audio>
+                <audio src="audio/audiosCombinados.mp3" id='player'></audio>
+                <button onclick="document.getElementById('player').play() "><img style="width: 24px; height: 24px;"
+                        src="img/play.png"></button>
+                <button onclick="document.getElementById('player').pause() "><img style="width: 24px; height: 24px;"
+                        src="img/pause.png"></button>
+                <button onclick="document.getElementById('player').volume+=0.1"><img style="width: 24px; height: 24px;"
+                        src="img/volumenUp.png"></button>
+                <button onclick="document.getElementById('player').volume-=0.1"><img style="width: 24px; height: 24px;"
+                        src="img/volumenDown.png"></button>
+                <button onclick="document.getElementById('player').mute"><img style="width: 24px; height: 24px;"
+                        src="img/volumenMute.png"></button>
             </div>
             <div class="card-body">
                 <h5 class="card-title">Información Empresa:</h5>
