--- a/Proyecto.html
+++ b/Proyecto.html
@@ -89,16 +89,56 @@
         <div class="divGrande">
             <div class="audio">
                 <audio src="audio/audiosCombinados.mp3" id='player'></audio>
-                <button onclick="document.getElementById('player').play() "><img style="width: 24px; height: 24px;"
-                        src="img/play.png"></button>
-                <button onclick="document.getElementById('player').pause() "><img style="width: 24px; height: 24px;"
-                        src="img/pause.png"></button>
-                <button onclick="document.getElementById('player').volume+=0.1"><img style="width: 24px; height: 24px;"
-                        src="img/volumenUp.png"></button>
-                <button onclick="document.getElementById('player').volume-=0.1"><img style="width: 24px; height: 24px;"
-                        src="img/volumenDown.png"></button>
-                <button onclick="document.getElementById('player').mute"><img style="width: 24px; height: 24px;"
-                        src="img/volumenMute.png"></button>
+                <button style="border: none; background-color: #CADDE8;"
+                    onclick="document.getElementById('player').play() "><svg xmlns="http://www.w3.org/2000/svg"
+                        class="icon icon-tabler icon-tabler-player-play" width="24" height="24" viewBox="0 0 24 24"
+                        stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round"
+                        stroke-linejoin="round">
+                        <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                        <path d="M7 4v16l13 -8z" />
+                    </svg></button>
+                <button style="border: none; background-color: #CADDE8;"
+                    onclick="document.getElementById('player').pause() "><svg xmlns="http://www.w3.org/2000/svg"
+                        class="icon icon-tabler icon-tabler-player-pause-filled" width="24" height="24"
+                        viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round"
+                        stroke-linejoin="round">
+                        <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                        <path d="M9 4h-2a2 2 0 0 0 -2 2v12a2 2 0 0 0 2 2h2a2 2 0 0 0 2 -2v-12a2 2 0 0 0 -2 -2z"
+                            stroke-width="0" fill="currentColor" />
+                        <path d="M17 4h-2a2 2 0 0 0 -2 2v12a2 2 0 0 0 2 2h2a2 2 0 0 0 2 -2v-12a2 2 0 0 0 -2 -2z"
+                            stroke-width="0" fill="currentColor" />
+                    </svg></button>
+                <button style="border: none; background-color: #CADDE8;"
+                    onclick="document.getElementById('player').volume+=0.1"><svg xmlns="http://www.w3.org/2000/svg"
+                        class="icon icon-tabler icon-tabler-volume" width="24" height="24" viewBox="0 0 24 24"
+                        stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round"
+                        stroke-linejoin="round">
+                        <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                        <path d="M15 8a5 5 0 0 1 0 8" />
+                        <path d="M17.7 5a9 9 0 0 1 0 14" />
+                        <path
+                            d="M6 15h-2a1 1 0 0 1 -1 -1v-4a1 1 0 0 1 1 -1h2l3.5 -4.5a.8 .8 0 0 1 1.5 .5v14a.8 .8 0 0 1 -1.5 .5l-3.5 -4.5" />
+                    </svg></button>
+                <button style="border: none; background-color: #CADDE8;"
+                    onclick="document.getElementById('player').volume-=0.1"><svg xmlns="http://www.w3.org/2000/svg"
+                        class="icon icon-tabler icon-tabler-volume-2" width="24" height="24" viewBox="0 0 24 24"
+                        stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round"
+                        stroke-linejoin="round">
+                        <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                        <path d="M15 8a5 5 0 0 1 0 8" />
+                        <path
+                            d="M6 15h-2a1 1 0 0 1 -1 -1v-4a1 1 0 0 1 1 -1h2l3.5 -4.5a.8 .8 0 0 1 1.5 .5v14a.8 .8 0 0 1 -1.5 .5l-3.5 -4.5" />
+                    </svg></button>
+                <button style="border: none; background-color: #CADDE8;"
+                    onclick="document.getElementById('player').mute"><svg xmlns="http://www.w3.org/2000/svg"
+                        class="icon icon-tabler icon-tabler-volume-3" width="24" height="24" viewBox="0 0 24 24"
+                        stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round"
+                        stroke-linejoin="round">
+                        <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                        <path
+                            d="M6 15h-2a1 1 0 0 1 -1 -1v-4a1 1 0 0 1 1 -1h2l3.5 -4.5a.8 .8 0 0 1 1.5 .5v14a.8 .8 0 0 1 -1.5 .5l-3.5 -4.5" />
+                        <path d="M16 10l4 4m0 -4l-4 4" />
+                    </svg></button>
             </div>
             <div class="card-body">
                 <h5 class="card-title">Información Empresa:</h5>
