--- a/PreguntasFrecuentes.html
+++ b/PreguntasFrecuentes.html
@@ -34,20 +34,23 @@
                     <li class="nav-bloque"><a href="SeguroM.html" class="nav-link">Seguros médicos</a></li>
                     <li class="nav-bloque"><a href="Profesionales.html" class="nav-link">Profesionales</a></li>
                     <li class="nav-bloque"><a href="VentajasCliente.html" class="nav-link">Ventajas clientes</a></li>
-                    <li class="nav-bloque"><a href="PreguntasFrecuentes.html" class="nav-link">Preguntas frecuentes</a></li>
+                    <li class="nav-bloque"><a href="PreguntasFrecuentes.html" class="nav-link">Preguntas frecuentes</a>
+                    </li>
                     <li class="nav-bloque"><a href="AreaPersonal.html" class="nav-link">Área Personal</a></li>
                 </ul>
             </nav>
-             <!-- menu en version acordeon -->
-             <nav class="navMenuAcordeon">
+            <!-- menu en version acordeon -->
+            <nav class="navMenuAcordeon">
                 <input type="checkbox" id="toggle" class="accordion-input">
                 <label for="toggle" class="accordion-header">☰</label>
                 <div class="accordion-content">
                     <ul>
                         <li class="nav-bloque"><a href="SeguroM.html" class="nav-link">Seguros médicos</a></li>
                         <li class="nav-bloque"><a href="Profesionales.html" class="nav-link">Profesionales</a></li>
-                        <li class="nav-bloque"><a href="VentajasCliente.html" class="nav-link">Ventajas clientes</a></li>
-                        <li class="nav-bloque"><a href="PreguntasFrecuentes.html" class="nav-link">Preguntas frecuentes</a></li>
+                        <li class="nav-bloque"><a href="VentajasCliente.html" class="nav-link">Ventajas clientes</a>
+                        </li>
+                        <li class="nav-bloque"><a href="PreguntasFrecuentes.html" class="nav-link">Preguntas
+                                frecuentes</a></li>
                         <li class="nav-bloque"><a href="AreaPersonal.html" class="nav-link">Área Personal</a></li>
                     </ul>
                 </div>
@@ -153,6 +156,13 @@
                     </p>
                 </div>
             </div>
+        </div>
+
+        <div class="reseñas">
+            <h2>RESEÑAS</h2>
+            <video poster="img/carabante.png" src="./video/carabante.mp4" controls width="360" height="240"></video>
+            <video poster="img/pablo.png" src="./video/pablo.mp4" controls width="360" height="240"></video>
+            <video poster="img/diego.png" src="./video/diego.mp4" controls width="360" height="240"></video>
         </div>
     </div>
 
