cambio en el video

--- a/Proyecto.html
+++ b/Proyecto.html
@@ -334,7 +334,7 @@
                         </form>
                     </div>
 
-                </div>s
+                </div>
             </footer>
         </div>
     </footer>
