creacion de accesibilidad

--- a/Proyecto.html
+++ b/Proyecto.html
@@ -77,6 +77,13 @@
             </nav>
 
         </div>
+
+        <div class="toggle">
+            <input type="checkbox">
+            <button class="button" onclick="cambiarColor()"></button>
+            <span class="label">☼</span>
+        </div>
+
     </header>
 
 
