implementacion del dark-mode, mejora de las RRSS y organizacion de ficheros

--- a/Profesionales.html
+++ b/Profesionales.html
@@ -56,6 +56,12 @@
                 </div>
             </nav>
         </div>
+
+        <div class="toggle">
+            <button class="button" id="button" onclick="cambiarColor()">☼</button>
+        </div>
+        <script src="./js/accesibilidad.js"></script>
+
     </header>
 
 
@@ -213,15 +219,122 @@
                 <div class="d-flex flex-column flex-sm-row justify-content-between py-4 my-4 border-top">
                     <p>&copy; 2023 Company, Inc. All rights reserved.</p>
                     <ul class="list-unstyled d-flex">
-                        <li class="ms-3"><a class="link-body-emphasis" href="#"><svg class="bi" width="24" height="24">
-                                    <img src='img/snapchat.jpg' alt='Logo'>
-                                </svg></a></li>
-                        <li class="ms-3"><a class="link-body-emphasis" href="#"><svg class="bi" width="24" height="24">
-                                    <img src='img/facebook.jpg' alt='Logo'>
-                                </svg></a></li>
-                        <li class="ms-3"><a class="link-body-emphasis" href="#"><svg class="bi" width="24" height="24">
-                                    <img src='img/twitter.jpg' alt='Logo'>
-                                </svg></a></li>
+                        <li class="ms-3"><a class="link-body-emphasis" href="#">
+                                <!-- Instagram -->
+                                <div class="tooltip-container">
+                                    <div class="tooltip">
+                                        <div class="profile">
+                                            <div class="user">
+                                                <div class="img">Ui</div>
+                                                <div class="details">
+                                                    <div class="name">User</div>
+                                                    <div class="username">@username</div>
+                                                </div>
+                                            </div>
+                                            <div class="about">800+ Followers</div>
+                                        </div>
+                                    </div>
+                                    <div class="text">
+                                        <a class="icon" href="#">
+                                            <div class="layer">
+                                                <span></span>
+                                                <span></span>
+                                                <span></span>
+                                                <span></span>
+                                                <span class="instagramSVG">
+                                                    <svg fill="white" class="svgIcon" viewBox="0 0 448 512"
+                                                        height="1.5em" xmlns="http://www.w3.org/2000/svg">
+                                                        <path
+                                                            d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7 74.7 33.5 74.7 74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM398.8 388c-7.8 19.6-22.9 34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z">
+                                                        </path>
+                                                    </svg>
+                                                </span>
+                                            </div>
+                                            <div class="text">Instagram</div>
+                                        </a>
+                                    </div>
+                                </div>
+                            </a></li>
+                        <li class="ms-3"><a class="link-body-emphasis" href="#">
+                                <!-- Facebook -->
+                                <div class="tooltip-container">
+                                    <div class="tooltip">
+                                        <div class="profile">
+                                            <div class="user">
+                                                <div class="img">Fb</div>
+                                                <div class="details">
+                                                    <div class="name">User</div>
+                                                    <div class="username">@username</div>
+                                                </div>
+                                            </div>
+                                            <div class="about">500+ Friends</div>
+                                        </div>
+                                    </div>
+                                    <div class="text">
+                                        <a class="icon" href="#">
+                                            <div class="layer">
+                                                <span></span>
+                                                <span></span>
+                                                <span></span>
+                                                <span></span>
+                                                <span class="facebookSVG">
+                                                    <svg viewBox="0 0 40 40" xml:space="preserve"
+                                                        xmlns="http://www.w3.org/2000/svg">
+                                                        <linearGradient gradientUnits="userSpaceOnUse"
+                                                            gradientTransform="matrix(40 0 0 -39.7778 11115.001 16212.334)"
+                                                            y2="407.5726" y1="406.6018" x2="-277.375" x1="-277.375"
+                                                            id="a">
+                                                            <stop stop-color="#0062e0" offset="0"></stop>
+                                                            <stop stop-color="#19afff" offset="1"></stop>
+                                                        </linearGradient>
+                                                        <path
+                                                            d="M16.7 39.8C7.2 38.1 0 29.9 0 20 0 9 9 0 20 0s20 9 20 20c0 9.9-7.2 18.1-16.7 19.8l-1.1-.9h-4.4l-1.1.9z"
+                                                            fill="url(#a)"></path>
+                                                        <path
+                                                            d="m27.8 25.6.9-5.6h-5.3v-3.9c0-1.6.6-2.8 3-2.8H29V8.2c-1.4-.2-3-.4-4.4-.4-4.6 0-7.8 2.8-7.8 7.8V20h-5v5.6h5v14.1c1.1.2 2.2.3 3.3.3 1.1 0 2.2-.1 3.3-.3V25.6h4.4z"
+                                                            fill="#fff"></path>
+                                                    </svg>
+                                                </span>
+                                            </div>
+                                            <div class="text">Facebook</div>
+                                        </a>
+                                    </div>
+                                </div>
+
+                            </a></li>
+
+                        <!-- Twitter -->
+                        <li class="ms-3"><a class="link-body-emphasis" href="#"><a class="icon" href="#">
+                                    <div class="tooltip-container">
+                                        <div class="tooltip">
+                                            <div class="profile">
+                                                <div class="user">
+                                                    <div class="img">Tw</div>
+                                                    <div class="details">
+                                                        <div class="name">User</div>
+                                                        <div class="username">@username</div>
+                                                    </div>
+                                                </div>
+                                                <div class="about">200+ Twits</div>
+                                            </div>
+                                        </div>
+                                        <div class="layer">
+                                            <span></span>
+                                            <span></span>
+                                            <span></span>
+                                            <span></span>
+                                            <span class="twitterSVG">
+                                                <!-- SVG del logotipo de Twitter aquí -->
+                                                <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                                                    <path
+                                                        d="M24 4.557c-.883.392-1.832.656-2.828.775 1.017-.609 1.798-1.574 2.165-2.724-.951.564-2.005.974-3.127 1.195-.897-.957-2.178-1.555-3.594-1.555-2.719 0-4.92 2.201-4.92 4.92 0 .386.044.762.128 1.124-4.087-.205-7.715-2.164-10.144-5.144-.422.724-.664 1.565-.664 2.465 0 1.701.867 3.2 2.188 4.078-.806-.026-1.566-.247-2.228-.616v.062c0 2.376 1.691 4.356 3.946 4.809-.411.111-.843.171-1.289.171-.315 0-.621-.03-.92-.086.622 1.942 2.422 3.355 4.558 3.394-1.67 1.309-3.778 2.088-6.066 2.088-.394 0-.78-.023-1.158-.067 2.179 1.397 4.768 2.212 7.548 2.212 9.142 0 14.307-7.721 13.995-14.646.962-.695 1.797-1.562 2.457-2.549z" />
+                                                </svg>
+                                            </span>
+                                        </div>
+                                        <div class="text">Twitter</div>
+                                    </div>
+                                </a>
+                            </a></li>
                     </ul>
                 </div>
             </footer>
