--- a/Profesionales.html
+++ b/Profesionales.html
@@ -23,7 +23,7 @@
     <header>
         <div class="contenedor">
             <h1>Profesionales</h1>
-            <a href="Proyecto.html"><img src="img/medicina.png" alt="Foto logo"></a>
+            <a href="index.html"><img src="img/medicina.png" alt="Foto logo"></a>
         </div>
 
         <!-- este es el menu -->
