--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebCura</title>
     <link rel="icon" href="img/medicina.png" type="image/png">
-    <link rel="stylesheet" href="css/Proyecto.css">
+    <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/headers.css">
     <link rel="stylesheet" href="css/footer.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -43,7 +43,7 @@
                     </div>
                 </div>
             </div>
-            <a href="Proyecto.html"><img src="img/medicina.png" alt="Foto logo"></a>
+            <a href="index.html"><img src="img/medicina.png" alt="Foto logo"></a>
         </div>
 
         <!-- este es el menu -->
