--- a/PreguntasFrecuentes.html
+++ b/PreguntasFrecuentes.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Preguntas Frecuentes</title>
     <link rel="icon" href="img/medicina.png" type="image/png">
-    <link rel="stylesheet" href="css/PreguntasF.css">
-    <link rel="stylesheet" href="css/headers.css">
-    <link rel="stylesheet" href="css/footer.css">
+    <link rel="stylesheet" href="sass/PreguntasF.css">
+    <link rel="stylesheet" href="sass/headers.css">
+    <link rel="stylesheet" href="sass/footer.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
@@ -23,7 +23,7 @@
     <header>
         <div class="contenedor">
             <h1>Preguntas Frecuentes</h1>
-            <a href="Proyecto.html"><img src="img/medicina.png" alt="Foto logo"></a>
+            <a href="index.html"><img src="img/medicina.png" alt="Foto logo"></a>
         </div>
 
         <!-- este es el menu -->
