organizacion del proyecto y subida con cambios finales

--- a/index.html
+++ b/index.html
@@ -203,44 +203,46 @@
 
 
     <!-- Aqui esta el formulario de los profesionales y las fotos de los medicos -->
-    <div class="profesional">
-        <div class="cabezas">
-            <img src="img/medico2.png" class="rounded-circle" data-bs-toggle="mensaje"
-                title="Dr. Juan Pérez - Cardiología">
-            <img src="img/medico3.png" class="rounded-circle" data-bs-toggle="mensaje"
-                title="Dra. María García - Pediatría">
-            <img src="img/medico1.png" class="rounded-circle" data-bs-toggle="mensaje"
-                title="Dr. Carlos López - Neurología">
-            <img src="img/medico2.png" class="rounded-circle" data-bs-toggle="mensaje"
-                title="Dr. Juan Pérez - Cardiología">
-            <img src="img/medico3.png" class="rounded-circle" data-bs-toggle="mensaje"
-                title="Dra. María García - Pediatría">
-            <img src="img/medico1.png" class="rounded-circle" data-bs-toggle="mensaje"
-                title="Dr. Carlos López - Neurología">
-            <img src="img/medico3.png" class="rounded-circle" data-bs-toggle="mensaje"
-                title="Dra. María García - Pediatría">
-            <img src="img/medico3.png" class="rounded-circle" data-bs-toggle="mensaje"
-                title="Dra. María García - Pediatría">
-            <img src="img/medico2.png" class="rounded-circle" data-bs-toggle="mensaje"
-                title="Dr. Juan Pérez - Cardiología">
-            <img src="img/medico3.png" class="rounded-circle" data-bs-toggle="mensaje"
-                title="Dra. María García - Pediatría">
-            <img src="img/medico1.png" class="rounded-circle" data-bs-toggle="mensaje"
-                title="Dr. Carlos López - Neurología">
-            <img src="img/medico1.png" class="rounded-circle" data-bs-toggle="mensaje"
-                title="Dr. Carlos López - Neurología">
-            <img src="img/medico3.png" class="rounded-circle" data-bs-toggle="mensaje"
-                title="Dra. María García - Pediatría">
-            <img src="img/medico3.png" class="rounded-circle" data-bs-toggle="mensaje"
-                title="Dra. María García - Pediatría">
-            <img src="img/medico2.png" class="rounded-circle" data-bs-toggle="mensaje"
-                title="Dr. Juan Pérez - Cardiología">
-            <img src="img/medico3.png" class="rounded-circle" data-bs-toggle="mensaje"
-                title="Dra. María García - Pediatría">
-            <img src="img/medico1.png" class="rounded-circle" data-bs-toggle="mensaje"
-                title="Dr. Carlos López - Neurología">
-            <img src="img/medico2.png" class="rounded-circle" data-bs-toggle="mensaje"
-                title="Dr. Juan Pérez - Cardiología">
+    <div class="principal">
+        <div class="profesional">
+            <div class="cabezas">
+                <img src="img/medico2.png" class="rounded-circle" data-bs-toggle="mensaje"
+                    title="Dr. Juan Pérez - Cardiología">
+                <img src="img/medico3.png" class="rounded-circle" data-bs-toggle="mensaje"
+                    title="Dra. María García - Pediatría">
+                <img src="img/medico1.png" class="rounded-circle" data-bs-toggle="mensaje"
+                    title="Dr. Carlos López - Neurología">
+                <img src="img/medico2.png" class="rounded-circle" data-bs-toggle="mensaje"
+                    title="Dr. Juan Pérez - Cardiología">
+                <img src="img/medico3.png" class="rounded-circle" data-bs-toggle="mensaje"
+                    title="Dra. María García - Pediatría">
+                <img src="img/medico1.png" class="rounded-circle" data-bs-toggle="mensaje"
+                    title="Dr. Carlos López - Neurología">
+                <img src="img/medico3.png" class="rounded-circle" data-bs-toggle="mensaje"
+                    title="Dra. María García - Pediatría">
+                <img src="img/medico3.png" class="rounded-circle" data-bs-toggle="mensaje"
+                    title="Dra. María García - Pediatría">
+                <img src="img/medico2.png" class="rounded-circle" data-bs-toggle="mensaje"
+                    title="Dr. Juan Pérez - Cardiología">
+                <img src="img/medico3.png" class="rounded-circle" data-bs-toggle="mensaje"
+                    title="Dra. María García - Pediatría">
+                <img src="img/medico1.png" class="rounded-circle" data-bs-toggle="mensaje"
+                    title="Dr. Carlos López - Neurología">
+                <img src="img/medico1.png" class="rounded-circle" data-bs-toggle="mensaje"
+                    title="Dr. Carlos López - Neurología">
+                <img src="img/medico3.png" class="rounded-circle" data-bs-toggle="mensaje"
+                    title="Dra. María García - Pediatría">
+                <img src="img/medico3.png" class="rounded-circle" data-bs-toggle="mensaje"
+                    title="Dra. María García - Pediatría">
+                <img src="img/medico2.png" class="rounded-circle" data-bs-toggle="mensaje"
+                    title="Dr. Juan Pérez - Cardiología">
+                <img src="img/medico3.png" class="rounded-circle" data-bs-toggle="mensaje"
+                    title="Dra. María García - Pediatría">
+                <img src="img/medico1.png" class="rounded-circle" data-bs-toggle="mensaje"
+                    title="Dr. Carlos López - Neurología">
+                <img src="img/medico2.png" class="rounded-circle" data-bs-toggle="mensaje"
+                    title="Dr. Juan Pérez - Cardiología">
+            </div>
         </div>
     </div>
 
@@ -269,17 +271,6 @@
             <button class="btn btn-primary" type="submit">Enviar</button>
         </div>
     </div>
-
-
-
-    <!-- <div class="enlace">
-        <ul>
-            <li><a href="#">Política de Calidad</a></li>
-            <li><a href="#"> Política de Privacidad - Aviso Legal</a></li>
-            <li><a href="#">Política de Cookies</a></li>
-        </ul>
-    </div> -->
-
 
     <!-- Aqui esta el footer -->
     <footer>
