readme y cambios de proyecto

--- a/VentajasCliente.html
+++ b/VentajasCliente.html
@@ -209,7 +209,8 @@
         </div>
 
         <div class="imagen">
-            <img src="img/fotoTablet.jpg" alt="foto">
+            <!-- Aqui hay un uso de filter como ejemplo -->
+            <img src="img/fotoTablet.jpg" alt="foto" style="filter: brightness(150%);">
         </div>
 
     </div>
